lab1/Test/L1-A-13-85.output
Error Type A at Line 2
Error Type B at Line 3
Error Type B at Line 5
Error Type B at Line 10
Error Type A at Line 38
Error Type A at Line 49
Error Type A at Line 56
