lab1/Test/L1-A-13-85.cmm
int cgP9B8EHh8O ( struct fjXbzjAywnPyXciWjzo {
~}hb5m1 ) {
  struct  {
  }fLg9fWi ;
  if Mi6jmcUd1Bx )   if ( Z ) {
    int z6wFehD7rUR92 ;
  }else   while ( X37DwrEj8v4k ) {
    IJiejkdK4Lk ;
    if ( hH_Fi9Jl )     if ( o7nHbbtBCon )     if 
      ( QX2LIkeUmzxyv071 ) float {
      int HNiySM6 ;
      int TVSEfa ;
    }else     while ( RlLkHwIOiz_ac7du )     nWcLvUs3cX 
      ;


else {
      struct b v1CEhF8YFzLeQfc , Kx2lfDMcP , TCKUK06hm9 
        [ 875247624 ] ;
      float VO6BVwdq = pFOg ;
      FXx2P1 ;
      if ( IoyDqWFUGn ) {
      }
    }
else     JkO3yOtU5 ;

    zVv8s ;
    ffyvCL0fJigQEgUS2 ;
    QGFPTN ;
    SwzxOB ;
    return XMpfhDfZmxPMS4Dq ;
  }

else   if ( QA5 )   P8UT = IR9qIYZry_a || NXe + vgkxeYUbY8iVXWkTS0O 
    * ! - ! fDL8Ox9arh90OA [ tToye && EIaGCg2uN > a2S 
    ( BOOQSPzYL_PikKHB , FiVfF7sAziw <= GY * YednvcvrvVPItBZv 
    [ T4fCMg0sqMJ == cMdQfTY2UEm * - ( QE = CZWa8 || XUGdqSyq03lNjo421w0E 
    < yjNRRK + LhDj $* reopBJbwx7nHT1P [ tFo9S5 >= v0 
    + - oH0ntUY54tFM2 . F4UEaVkSiD8I27c0 ] . V5d9ne ) 
    != ! 1189260585 ] - EERgAaXQ8 ( ) ) . GHGprld2VT7x1SU 
    ] / ! - 1937697550.368654731 ;


}
int G , wqmE0t 

;
int ;
int ;@
int ;
int wX6O7RYe0rTuCum8i ( int shoe4BtHQ1Nxr , int c4ARFwS35kZUST 
  ) {
}
int Sp5wMTOTuDay ( ) {
}
int :pmLA5aXl9sQUWBulH ( ) {
}
